adding new profile imgs, social links, founder and advisor roles, yellow border to images

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -17,12 +17,11 @@
                 <div class="row">
                     <div class="col">
                         <p> Allen Foust </p>
-                        <img src ="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
-                        <div>
-                            <a href="https://github.com/" target="_blank">
-                                <i class="github"></i>
+                        <img class="border" src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+			<div>
+			<a href="https://www.linkedin.com/in/allenfoust" target="_blank">
+                                <i class="linkedin"></i>
                             </a>
-
 
                             <a href="https://twitter.com" target="_blank">
                                 <i class="twitter"></i>
@@ -33,21 +32,34 @@
                             </a>
                         </div>
                     </div>
+		    <div class="col">
+			    <p> Dr. Ankur Chowdhary </p>
+			    <img src="/src/assets/img/DevilSecLogo.png" style="width:200px; height:200px;"></img>
+			<div>
+				<a href="https://github.com/ankur8931" target="_blank">
+					<i class="github"></i>
+				</a>
+				<a href="https://ankurchowdhary.com/" target="_blank">
+					<i class="firefox"></i>
+				</a>
+
+			</div>
+		    </div>
                     <div class="col">
                         <p> Matt Keeley </p>
                         <img src ="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
 
                         <div>
-                            <a href="https://github.com/" target="_blank">
+                            <a href="https://github.com/MattKeeley" target="_blank">
                                 <i class="github"></i>
                             </a>
 
-                            <a href="https://twitter.com" target="_blank">
-                                <i class="twitter"></i>
+                            <a href="https://www.linkedin.com/in/mattrkeeley" target="_blank">
+                                <i class="linkedin"></i>
                             </a>
 
-                            <a href="https://facebook.com" target="_blank">
-                                <i class="facebook"></i>
+                            <a href="https://azserg.com/" target="_blank">
+                                <i class="firefox"></i>
                             </a>
                         </div>
                     </div>
@@ -57,18 +69,14 @@
                     <div class="col">
                         <b> President:</b>
                         <p> Lani Sears </p>
-                        <img src="/src/assets/img/lani.png" style="width:200px;height:200px;"></img>
-                        <div>
-                            <a href="https://github.com/" target="_blank">
+                        <img class="border" src="/src/assets/img/lani.png" style="width:200px;height:200px;"></img>
+			<div>
+                            <a href="https://github.com/leilanisears" target="_blank">
                                 <i class="github"></i>
                             </a>
 
-                            <a href="https://twitter.com" target="_blank">
-                                <i class="twitter"></i>
-                            </a>
-
-                            <a href="https://facebook.com" target="_blank">
-                                <i class="facebook"></i>
+                            <a href="https://www.linkedin.com/in/leilanisears" target="_blank">
+                                <i class="linkedin"></i>
                             </a>
                         </div>
                     </div>
@@ -81,12 +89,12 @@
                                 <i class="github"></i>
                             </a>
 
-                            <a href="https://twitter.com" target="_blank">
-                                <i class="twitter"></i>
+                            <a href="https://www.linkedin.com/in/daylamtayari" target="_blank">
+                                <i class="linkedin"></i>
                             </a>
 
-                            <a href="https://facebook.com" target="_blank">
-                                <i class="facebook"></i>
+                            <a href="https://tayari.gg" target="_blank">
+                                <i class="firefox"></i>
                             </a>
                         </div>
                     </div>
@@ -96,16 +104,12 @@
                         <img src="/src/assets/img/singh.png" style="width:200px;height:200px;"></img>
 
                         <div>
-                            <a href="https://github.com/" target="_blank">
-                                <i class="github"></i>
-                            </a>
-
-                            <a href="https://twitter.com" target="_blank">
+                            <a href="https://twitter.com/Gursharan1337" target="_blank">
                                 <i class="twitter"></i>
                             </a>
 
-                            <a href="https://facebook.com" target="_blank">
-                                <i class="facebook"></i>
+                            <a href="https://www.linkedin.com/in/singh1337/" target="_blank">
+                                <i class="linkedin"></i>
                             </a>
                         </div>
                     </div>
@@ -114,16 +118,8 @@
                         <p> Thad Shinno </p>
                         <img src="/src/assets/img/thad.png"></img>
                         <div>
-                            <a href="https://github.com/" target="_blank">
+                            <a href="https://github.com/sadeli413" target="_blank">
                                 <i class="github"></i>
-                            </a>
-
-                            <a href="https://twitter.com" target="_blank">
-                                <i class="twitter"></i>
-                            </a>
-
-                            <a href="https://facebook.com" target="_blank">
-                                <i class="facebook"></i>
                             </a>
                         </div>
                     </div>
@@ -131,104 +127,47 @@
                     <div class="row">
                         <div class="col">
                             <p>Ero</p>
-                            <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                            <img src="/src/assets/img/ero.png" style="width:200px;height:200px;"></img>
                             <div>
-                                <a href="https://github.com/" target="_blank">
-                                    <i class="github"></i>
+				<a href="https://github.com/josephH00" style="width:200px;height:200px;"></img>
+                                <i class="github"></i>
                                 </a>
 
-                                <a href="https://twitter.com" target="_blank">
-                                    <i class="twitter"></i>
-                                </a>
-
-                                <a href="https://facebook.com" target="_blank">
-                                    <i class="facebook"></i>
+                                <a href="https://www.linkedin.com/in/joseph-hand/" target="_blank">
+                                    <i class="linkedin"></i>
                                 </a>
                             </div>
                         </div>
                         <div class="col">
                             <p>Ben</p>
-                            <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                            <img src="/src/assets/img/ben.png" style="width:200px;height:200px;"></img>
                             <div>
                                 <a href="https://github.com/Nightfire-0x07" target="_blank">
                                     <i class="github"></i>
                                 </a>
-
-                                <a href="https://twitter.com" target="_blank">
-                                    <i class="twitter"></i>
-                                </a>
-
-                                <a href="https://facebook.com" target="_blank">
-                                    <i class="facebook"></i>
-                                </a>
                             </div>
                         </div>
                         <div class="col">
-                            <p>Kyle29</p>
+                            <p>Kyle</p>
                             <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
                             <div>
-                                <a href="https://github.com/" target="_blank">
+                                <a href="https://github.com/KyleMuncie" target="_blank">
                                     <i class="github"></i>
                                 </a>
 
-                                <a href="https://twitter.com" target="_blank">
+                                <a href="https://twitter.com/MuncieKyle" target="_blank">
                                     <i class="twitter"></i>
                                 </a>
 
-                                <a href="https://facebook.com" target="_blank">
-                                    <i class="facebook"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <p>Warden</p>
-                            <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
-                            <div>
-                                <a href="https://github.com/" target="_blank">
-                                    <i class="github"></i>
-                                </a>
-
-                                <a href="https://twitter.com" target="_blank">
-                                    <i class="twitter"></i>
-                                </a>
-
-                                <a href="https://facebook.com" target="_blank">
-                                    <i class="facebook"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <p>Zi Jia Tan</p>
-                            <img src="/src/assets/img/zi.png" style="width:200px;height:200px;"></img>
-                            <div>
-                                <a href="https://github.com/" target="_blank">
-                                    <i class="github"></i>
-                                </a>
-
-                                <a href="https://twitter.com" target="_blank">
-                                    <i class="twitter"></i>
-                                </a>
-
-                                <a href="https://facebook.com" target="_blank">
-                                    <i class="facebook"></i>
-                                </a>
+				<a href="https://www.linkedin.com/in/kylemuncie" target="_blank">
+					<i class="linkedin"></i>
+				</a>
                             </div>
                         </div>
                         <div class="col">
                             <p>Megi</p>
-                            <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                            <img src="/src/assets/img/megi.png" style="width:200px;height:200px;"></img>
                             <div>
-                                <a href="https://github.com/" target="_blank">
-                                    <i class="github"></i>
-                                </a>
-
-                                <a href="https://twitter.com" target="_blank">
-                                    <i class="twitter"></i>
-                                </a>
-
-                                <a href="https://facebook.com" target="_blank">
-                                    <i class="facebook"></i>
-                                </a>
                             </div>
                         </div>
                         <div class="col">
@@ -239,16 +178,32 @@
                                     <i class="github"></i>
                                 </a>
 
-                                <a href="https://twitter.com" target="_blank">
-                                    <i class="twitter"></i>
-                                </a>
-
-                                <a href="https://facebook.com" target="_blank">
-                                    <i class="facebook"></i>
+                                <a href="https://www.linkedin.com/in/prenjell/" target="_blank">
+                                    <i class="linkedin"></i>
                                 </a>
                             </div>
                         </div>
                     </div>
+		    <h3> Advisors </h3>
+		    <div class="row">
+			    <div class="col">
+				    <p> Pascal-0x09 </p>
+				    <img src="/src/assets/img/pascal.png" style="width:200px;height:200px"></img>
+				    <div>
+					    <a href="https://github.com/Pascal-0x90" target="_blank">
+						    <i class="github"></i>
+					    </a>
+			    </div>
+		    </div>
+		    <div class="col">
+			    <p> Colt </p>
+			    <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+		    <div>
+			<a href="https://www.linkedin.com/in/colton-kohnen" target="_blank">
+				<i class="linkedin"></i>
+			</a>
+		    </div>
+		    </div>
                 </div>
                 <h4> Have questions? </h4>
                 <div>
