adjusted icon colors and border class in scss

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -17,24 +17,17 @@
                 <div class="row">
                     <div class="col">
                         <p> Allen Foust </p>
-                        <img class="border" src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                        <img class="border size" src="/src/assets/img/DevilSecLogo.png"></img>
 			<div>
 			<a href="https://www.linkedin.com/in/allenfoust" target="_blank">
                                 <i class="linkedin"></i>
                             </a>
 
-                            <a href="https://twitter.com" target="_blank">
-                                <i class="twitter"></i>
-                            </a>
-
-                            <a href="https://facebook.com" target="_blank">
-                                <i class="facebook"></i>
-                            </a>
                         </div>
                     </div>
 		    <div class="col">
 			    <p> Dr. Ankur Chowdhary </p>
-			    <img src="/src/assets/img/DevilSecLogo.png" style="width:200px; height:200px;"></img>
+			    <img class="border size" src="/src/assets/img/DevilSecLogo.png"></img>
 			<div>
 				<a href="https://github.com/ankur8931" target="_blank">
 					<i class="github"></i>
@@ -47,7 +40,7 @@
 		    </div>
                     <div class="col">
                         <p> Matt Keeley </p>
-                        <img src ="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                        <img class="border size" src ="/src/assets/img/DevilSecLogo.png"></img>
 
                         <div>
                             <a href="https://github.com/MattKeeley" target="_blank">
@@ -69,7 +62,7 @@
                     <div class="col">
                         <b> President:</b>
                         <p> Lani Sears </p>
-                        <img class="border" src="/src/assets/img/lani.png" style="width:200px;height:200px;"></img>
+                        <img class="border size" src="/src/assets/img/lani.png"></img>
 			<div>
                             <a href="https://github.com/leilanisears" target="_blank">
                                 <i class="github"></i>
@@ -83,7 +76,7 @@
                     <div class="col">
                         <b> Vice President:</b>
                         <p> Tayari </p>
-                        <img src="/src/assets/img/tayari.png" style="width:200px;height:200px;"></img>
+                        <img class="border size" src="/src/assets/img/tayari.png"></img>
                         <div>
                             <a href="https://github.com/daylamtayari" target="_blank">
                                 <i class="github"></i>
@@ -101,7 +94,7 @@
                     <div class="col">
                         <b> Treasurer:</b>
                         <p> Gursharan Singh </p>
-                        <img src="/src/assets/img/singh.png" style="width:200px;height:200px;"></img>
+                        <img class="border size" src="/src/assets/img/singh.png"></img>
 
                         <div>
                             <a href="https://twitter.com/Gursharan1337" target="_blank">
@@ -116,7 +109,7 @@
                     <div class="col">
                         <b> Secretary:</b>
                         <p> Thad Shinno </p>
-                        <img src="/src/assets/img/thad.png"></img>
+                        <img class="border size" src="/src/assets/img/thad.png"></img>
                         <div>
                             <a href="https://github.com/sadeli413" target="_blank">
                                 <i class="github"></i>
@@ -127,9 +120,9 @@
                     <div class="row">
                         <div class="col">
                             <p>Ero</p>
-                            <img src="/src/assets/img/ero.png" style="width:200px;height:200px;"></img>
+                            <img class="border size" src="/src/assets/img/ero.png"></img>
                             <div>
-				<a href="https://github.com/josephH00" style="width:200px;height:200px;"></img>
+				<a href="https://github.com/josephH00"></img>
                                 <i class="github"></i>
                                 </a>
 
@@ -140,7 +133,7 @@
                         </div>
                         <div class="col">
                             <p>Ben</p>
-                            <img src="/src/assets/img/ben.png" style="width:200px;height:200px;"></img>
+                            <img class="border size" src="/src/assets/img/ben.png"></img>
                             <div>
                                 <a href="https://github.com/Nightfire-0x07" target="_blank">
                                     <i class="github"></i>
@@ -149,7 +142,7 @@
                         </div>
                         <div class="col">
                             <p>Kyle</p>
-                            <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+                            <img class="border size" src="/src/assets/img/DevilSecLogo.png"></img>
                             <div>
                                 <a href="https://github.com/KyleMuncie" target="_blank">
                                     <i class="github"></i>
@@ -166,13 +159,18 @@
                         </div>
                         <div class="col">
                             <p>Megi</p>
-                            <img src="/src/assets/img/megi.png" style="width:200px;height:200px;"></img>
-                            <div>
+                            <img class="border size" src="/src/assets/img/megi.png"></img>
+			    <div>
+				    <a href="https://www.linkedin.com/in/megi-bashi/" target="_blank">
+				    <i class="linkedin"></i>
+			    </div>
+			    </a>
+			    <div>
                             </div>
                         </div>
                         <div class="col">
                             <p>Prithviraj</p>
-                            <img src="/src/assets/img/prithvi.png" style="width:200px;height:200px;"></img>
+                            <img class="border size" src="/src/assets/img/prithvi.png"></img>
                             <div>
                                 <a href="https://github.com/prithvidiamond1" target="_blank">
                                     <i class="github"></i>
@@ -188,7 +186,7 @@
 		    <div class="row">
 			    <div class="col">
 				    <p> Pascal-0x09 </p>
-				    <img src="/src/assets/img/pascal.png" style="width:200px;height:200px"></img>
+				    <img class="border size" src="/src/assets/img/pascal.png"></img>
 				    <div>
 					    <a href="https://github.com/Pascal-0x90" target="_blank">
 						    <i class="github"></i>
@@ -197,7 +195,7 @@
 		    </div>
 		    <div class="col">
 			    <p> Colt </p>
-			    <img src="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
+			    <img class="border size" src="/src/assets/img/DevilSecLogo.png"></img>
 		    <div>
 			<a href="https://www.linkedin.com/in/colton-kohnen" target="_blank">
 				<i class="linkedin"></i>
