fixed scss styling and reduced class callouts in about.html

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -11,13 +11,13 @@
             </p><br></br>
             <p>
             DevilSec holds weekly formal meetings throughout the Fall and Spring semesters that cover a range of topics starting from using a virtual machine with Linux, to learning different tools such as web proxies and port scanners, and eventually to utilizing actual exploits for vulnerabilities in practice labs to get hands on experience. The group also has informal meetings for members that want to walk though a machine on HackTheBox or just be around to chat and answer questions.
-            </p><br></br>
+	    </p><br></br></div>
             <div class="container-fluid row text-center" style="height: 100%; padding-top: 50px; padding-bottom: 60px;">
                 <h3>Founders</h3>
                 <div class="row">
-                    <div class="col">
+                    <div class="col profile">
                         <p> Allen Foust </p>
-                        <img class="border size" src="/src/assets/img/DevilSecLogo.png"></img>
+                        <img src="/src/assets/img/DevilSecLogo.png"></img>
 			<div>
 			<a href="https://www.linkedin.com/in/allenfoust" target="_blank">
                                 <i class="linkedin"></i>
@@ -25,9 +25,9 @@
 
                         </div>
                     </div>
-		    <div class="col">
+		    <div class="col profile">
 			    <p> Dr. Ankur Chowdhary </p>
-			    <img class="border size" src="/src/assets/img/DevilSecLogo.png"></img>
+			    <img src="/src/assets/img/DevilSecLogo.png"></img>
 			<div>
 				<a href="https://github.com/ankur8931" target="_blank">
 					<i class="github"></i>
@@ -38,9 +38,9 @@
 
 			</div>
 		    </div>
-                    <div class="col">
+                    <div class="col profile">
                         <p> Matt Keeley </p>
-                        <img class="border size" src ="/src/assets/img/DevilSecLogo.png"></img>
+                        <img src ="/src/assets/img/DevilSecLogo.png"></img>
 
                         <div>
                             <a href="https://github.com/MattKeeley" target="_blank">
@@ -59,10 +59,10 @@
                 </div>
                 <h3>Current leadership</h3>
                 <div class="row">
-                    <div class="col">
+                    <div class="col profile">
                         <b> President:</b>
                         <p> Lani Sears </p>
-                        <img class="border size" src="/src/assets/img/lani.png"></img>
+                        <img src="/src/assets/img/lani.png"></img>
 			<div>
                             <a href="https://github.com/leilanisears" target="_blank">
                                 <i class="github"></i>
@@ -73,10 +73,10 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col profile">
                         <b> Vice President:</b>
                         <p> Tayari </p>
-                        <img class="border size" src="/src/assets/img/tayari.png"></img>
+                        <img src="/src/assets/img/tayari.png"></img>
                         <div>
                             <a href="https://github.com/daylamtayari" target="_blank">
                                 <i class="github"></i>
@@ -91,10 +91,10 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col profile">
                         <b> Treasurer:</b>
                         <p> Gursharan Singh </p>
-                        <img class="border size" src="/src/assets/img/singh.png"></img>
+                        <img src="/src/assets/img/singh.png"></img>
 
                         <div>
                             <a href="https://twitter.com/Gursharan1337" target="_blank">
@@ -106,21 +106,21 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col profile">
                         <b> Secretary:</b>
                         <p> Thad Shinno </p>
-                        <img class="border size" src="/src/assets/img/thad.png"></img>
+                        <img src="/src/assets/img/thad.png"></img>
                         <div>
                             <a href="https://github.com/sadeli413" target="_blank">
                                 <i class="github"></i>
                             </a>
                         </div>
                     </div>
-                    <h3> Officers </h3>
+                    <h3> Staff </h3>
                     <div class="row">
-                        <div class="col">
+                        <div class="col profile">
                             <p>Ero</p>
-                            <img class="border size" src="/src/assets/img/ero.png"></img>
+                            <img src="/src/assets/img/ero.png"></img>
                             <div>
 				<a href="https://github.com/josephH00"></img>
                                 <i class="github"></i>
@@ -131,18 +131,18 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col profile">
                             <p>Ben</p>
-                            <img class="border size" src="/src/assets/img/ben.png"></img>
+                            <img src="/src/assets/img/ben.png"></img>
                             <div>
                                 <a href="https://github.com/Nightfire-0x07" target="_blank">
                                     <i class="github"></i>
                                 </a>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col profile">
                             <p>Kyle</p>
-                            <img class="border size" src="/src/assets/img/DevilSecLogo.png"></img>
+                            <img src="/src/assets/img/DevilSecLogo.png"></img>
                             <div>
                                 <a href="https://github.com/KyleMuncie" target="_blank">
                                     <i class="github"></i>
@@ -157,9 +157,9 @@
 				</a>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col profile">
                             <p>Megi</p>
-                            <img class="border size" src="/src/assets/img/megi.png"></img>
+                            <img src="/src/assets/img/megi.png"></img>
 			    <div>
 				    <a href="https://www.linkedin.com/in/megi-bashi/" target="_blank">
 				    <i class="linkedin"></i>
@@ -168,9 +168,9 @@
 			    <div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col profile">
                             <p>Prithviraj</p>
-                            <img class="border size" src="/src/assets/img/prithvi.png"></img>
+                            <img src="/src/assets/img/prithvi.png"></img>
                             <div>
                                 <a href="https://github.com/prithvidiamond1" target="_blank">
                                     <i class="github"></i>
@@ -184,18 +184,18 @@
                     </div>
 		    <h3> Advisors </h3>
 		    <div class="row">
-			    <div class="col">
+			    <div class="col profile">
 				    <p> Pascal-0x09 </p>
-				    <img class="border size" src="/src/assets/img/pascal.png"></img>
+				    <img src="/src/assets/img/pascal.png"></img>
 				    <div>
 					    <a href="https://github.com/Pascal-0x90" target="_blank">
 						    <i class="github"></i>
 					    </a>
 			    </div>
 		    </div>
-		    <div class="col">
+		    <div class="col profile">
 			    <p> Colt </p>
-			    <img class="border size" src="/src/assets/img/DevilSecLogo.png"></img>
+			    <img src="/src/assets/img/DevilSecLogo.png"></img>
 		    <div>
 			<a href="https://www.linkedin.com/in/colton-kohnen" target="_blank">
 				<i class="linkedin"></i>
