changed current leadership to officers

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                 </div>
-                <h3>Current leadership</h3>
+                <h3>Officers</h3>
                 <div class="row">
                     <div class="col profile">
                         <b> President:</b>
