--- a/src/pages/schedule.html
+++ b/src/pages/schedule.html
@@ -47,7 +47,7 @@
                 <div class="container-fluid px-4">
                     <div class="row gx-5">
                         <div class="col-sm-3">
-                            <button type="button" class="schedule-card" data-bs-toggle="modal" data-bs-target="#eventModal"
+                            <button type="button" class="schedule-card next-4" data-bs-toggle="modal" data-bs-target="#eventModal"
                                 data-bs-name='[Name]' data-bs-date='[Date]' data-bs-time='[Time]' data-bs-loc='[Location]'
                                 data-bs-loc-url='{{ Location URL }}'  data-bs-speakers='[Speakers]' data-bs-desc='[Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.]' data-bs-ics-url='{{ ICS URL }}'
                                 >
@@ -63,7 +63,7 @@
                             </button>
                         </div>
                         <div class="col-sm-3">
-                            <button type="button" class="schedule-card" data-bs-toggle="modal" data-bs-target="#eventModal"
+                            <button type="button" class="schedule-card next-4" data-bs-toggle="modal" data-bs-target="#eventModal"
                                 data-bs-name='[Name]' data-bs-date='[Date]' data-bs-time='[Time]' data-bs-loc='[Location]'
                                 data-bs-loc-url='{{ Location URL }}'  data-bs-speakers='[Speakers]' data-bs-desc='[Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.]' data-bs-ics-url='{{ ICS URL }}'
                                 >
@@ -79,7 +79,7 @@
                             </button>
                         </div>
                         <div class="col-sm-3">
-                            <button type="button" class="schedule-card" data-bs-toggle="modal" data-bs-target="#eventModal"
+                            <button type="button" class="schedule-card next-4" data-bs-toggle="modal" data-bs-target="#eventModal"
                                 data-bs-name='[Name]' data-bs-date='[Date]' data-bs-time='[Time]' data-bs-loc='[Location]'
                                 data-bs-loc-url='{{ Location URL }}'  data-bs-speakers='[Speakers]' data-bs-desc='[Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.]' data-bs-ics-url='{{ ICS URL }}'
                                 >
@@ -95,7 +95,7 @@
                             </button>
                         </div>
                         <div class="col-sm-3">
-                            <button type="button" class="schedule-card" data-bs-toggle="modal" data-bs-target="#eventModal"
+                            <button type="button" class="schedule-card next-4" data-bs-toggle="modal" data-bs-target="#eventModal"
                                 data-bs-name='[Name]' data-bs-date='[Date]' data-bs-time='[Time]' data-bs-loc='[Location]'
                                 data-bs-loc-url='{{ Location URL }}'  data-bs-speakers='[Speakers]' data-bs-desc='[Description Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.]' data-bs-ics-url='{{ ICS URL }}'
                                 >
