--- a/src/pages/offerings.html
+++ b/src/pages/offerings.html
@@ -11,28 +11,28 @@
 			<div class="card-header"> 1 on 1 Mentoring</div>
 			<img class="card-img-top"></img>
 			<div class="card-body">
-			<p>DevilSec can provide hands on training from senior level members, some of whom already work in the info sec industry.</p>
+			<p>DevilSec can provide hands on training from senior level members, some of whom already work in the info sec industry. Attend a meeting in person or reach out on Discord using one the server's many channels to get the appropriate support you need.</p>
 			</div>
 		</div>
 		<div class="col card text-white bg-secondary mb-3">
 			<div class="card-header"> Intro to Linux and Command Line </div>
 			<img class="card-img-top"></img>
 			<div class="card-body">
-			<p>  Most of the staff use Linux as their daily driver OS and can provide support for members just starting to learn the ropes of Linux and using the terminal. </p>
+			<p>  Several staff members use Linux as their daily driver and can provide advice and suggestions on how to improve. Some members start with zero knowledge of Linux and the terminal and are able to learn very quickly and apply their skills right away.</p>
 			</div>
 		</div>
 		<div class="col card text-white bg-secondary mb-3">
 			<div class="card-header"> Project Based Learning Opportunities</div>
 			<img class="card-img-top"></img>
 			<div class="card-body">
-			<p> DevilSec continues to grow and add new approaches to breaking into the infosec and cybersecurity industries. Staff typically need support when it comes to building CTF infrastructure, educational materials, and other web based technologies. There are new projects every year and all members are welcome to join projects and learn along the way. </p>
+			<p> DevilSec continues to grow! Staff need volunteers when it comes to building CTF infrastructure, educational materials, and other web based technologies. There are new projects every year and all members are welcome to join projects and learn along the way. </p>
 			</div>
 		</div>
 		<div class="col card text-white bg-secondary mb-3">
 			<div class="card-header"> Guest Speakers </div>
 			<img class="card-img-top"></img>
 			<div class="card-body">
-				<p> We find industry professionals to give presentations on their projects, work, and how they got into their fields. These talks provide opportunities for Q&A and getting advice on networking and bolstering your professional portfolio </p>
+				<p> We find industry professionals to give presentations on their projects, work, and how they got into their fields. These talks provide opportunities for Q&A and getting advice on networking and bolstering your professional portfolio. These speaking events are usually are most popular ones to attend!</p>
 		</div>
 	</div>
 	<div class="row text-center">
