--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -5,14 +5,13 @@
         <!--<base target="_blank">-->
     </head>
     <body>
-        <div class="container-fluid row text-center">
+        <div class="container-fluid row text-center" style="padding-bottom: 10px !important;">
             <h1>About DevilSec</h1>
-            <p> DevilSec was founded as a student group at ASU to socialize, network, and learn the current industry standard tools of the cybersecurity field. The group serves as an entry point for students of computer science and other majors to compensate for the lack of current offensive cybersecurity curriculum universities' lack or otherwise teach using dated and irrelevant information and resources.
-            </p><br></br>
-            <p>
-            DevilSec holds weekly formal meetings throughout the Fall and Spring semesters that cover a range of topics starting from using a virtual machine with Linux, to learning different tools such as web proxies and port scanners, and eventually to utilizing actual exploits for vulnerabilities in practice labs to get hands on experience. The group also has informal meetings for members that want to walk though a machine on HackTheBox or just be around to chat and answer questions.
-	    </p><br></br></div>
-            <div class="container-fluid row text-center" style="height: 100%; padding-top: 50px; padding-bottom: 60px;">
+            <p> DevilSec was founded as a student group at ASU to socialize, network, and learn the current industry standard tools of the cybersecurity field. The group serves as an entry point for students of computer science and other majors to compensate for the lack of current offensive cybersecurity curriculum universities' lack or otherwise teach using dated and irrelevant information and resources.</p>
+<p>DevilSec holds weekly formal meetings throughout the Fall and Spring semesters that cover a range of topics starting from using a virtual machine with Linux, to learning different tools such as web proxies and port scanners, and eventually to utilizing actual exploits for vulnerabilities in practice labs to get hands on experience. The group also has informal meetings for members that want to walk though a machine on HackTheBox or just be around to chat and answer questions.
+	    </p>
+	</div>
+            <div class="container-fluid row text-center">
                 <h3>Founders</h3>
                 <div class="row">
                     <div class="col profile">
@@ -209,5 +208,6 @@
                     <p> Both ASU students and non ASU members can feel free to hop in the Discord server and ask questions there as well.</p>
                 </div>
             </div>
+    </body>
 </html>
 
